Update index.html- Linked CV PDF

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 to problems in policy and climate.
             </p>
 
-            <a href="#" class="cv-link">
+            <a href="#" class="cv" target="_blank" class="cv-link">
                 <i class="fa-solid fa-download"></i> Download my CV
             </a>
 
