Update index.html- Linked Irrigation Policy Paper

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
     <div class="research-card">
         <div class="paper-preview">
-            <a href="water-paper.pdf" target="_blank">
-                <img src="paper2.png" alt="Water Rationing Paper">
+            <a href="irrigation-paper.pdf" target="_blank">
+                <img src="paper2.png" alt="Irrigation Paper">
             </a>
         </div>
         <p class="research-text">
