Update index.html- Linked Irrigation Policy Paper

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <p class="research-text">
             <strong>Published Research:</strong><br>
-            <a href="water-paper.pdf" target="_blank" class="paper-link">
+            <a href="irrigation-paper.pdf" target="_blank" class="paper-link">
                 Household-level Targeting under Water Rationing Policy: Evidence from Agricultural Punjab
             </a>
         </p>
