Update index.html- Updated CV Link

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 to problems in policy and climate.
             </p>
 
-            <a href="#" class="cv.pdf" target="_blank" class="cv-link">
-                <i class="fa-solid fa-download"></i> Download my CV
-            </a>
+            <a href="cv.pdf" target="_blank" class="cv-link">
+    <i class="fa-solid fa-download"></i> Download my CV
+</a>
 
             <div class="social-icons">
     <a href="https://linkedin.com/in/suhana-grewal" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
